src/tests/test-src/errors/R26-array-step-zero-f.syntran
let s = 0.0;
let a = [0.0: s: 5.0];
